--- a/learn_1/jicheng/jicheng/jicheng.vcxproj
+++ b/learn_1/jicheng/jicheng/jicheng.vcxproj
@@ -145,10 +145,16 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="BaseMonster.h" />
+    <ClInclude Include="Giant.h" />
+    <ClInclude Include="Human.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="BaseMonster.cpp" />
+    <ClCompile Include="Giant.cpp" />
+    <ClCompile Include="Human.cpp" />
     <ClCompile Include="jicheng.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
